Somewhat fixed the alignment of the genre buttons but it needs more work

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,17 +290,30 @@ nav ul li:nth-child(3) a {
 
 .game-container {
   display: grid;
-  gap: 28px;
-  grid-template-areas:
-    "genre genre genre genre genre"
-    "genre genre genre genre genre ";
+  grid-template-columns: repeat(22, 1fr);
+  grid-auto-rows: 40px;
+  grid-gap: 48px;
+  row-gap: 48px;
 }
 
-.game-container button {
-  grid-area: "genre";
+.genre:nth-child(-1n + 6) {
+  grid-column: span 4;
+}
+.genre:nth-last-child(2) {
+  grid-row-start: 2;
+  grid-column: 3 / span 4;
+}
+.genre:nth-last-child(3) {
+  grid-row-start: 2;
+  grid-column: 7 / span 4;
 }
 
-.game-container button {
+.genre:nth-last-child(1) {
+  grid-row-start: 2;
+  grid-column: 11 / span 4;
+}
+
+.genre button {
   display: flex;
   align-items: center;
   border-radius: 55px;
@@ -314,10 +327,15 @@ nav ul li:nth-child(3) a {
   transition: border-color 0.5s, color 0.5s;
 }
 
-.game-container button:hover {
+.genre button:hover {
   border-color: var(--primary-color);
   color: var(--primary-color);
 }
+
+.genre p{
+    white-space: nowrap; 
+}
+
 
 /* FOOTER SECTION */
 
